# mcp-cassette-clean

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.agents_workspace/: ARCHITECTURE.md  DECISION_LOG.md
.agents_workspace/planning/: ITER_05.md
.agents_workspace/planning/v3/: ITER_01_v3.md  ITER_02_v3.md  ITER_03_v3.md  ITER_04_v3.md
.github/workflows/: ci.yml  publish.yml
docs/guide/: 01-getting-started.md  10-troubleshooting.md  index.md
docs/guide/how-to/: 02-record-and-replay.md  03-remote-http.md  04-use-as-a-library.md  05-inject-faults.md  06-replay-timing.md  07-inspect-and-diff.md  08-redact-secrets.md  09-lint-pattern-packs.md
docs/guide/operations/: 11-install.md  12-configure.md  13-ci.md  14-cli-reference.md  15-runbook-replay-misses.md
examples/: README.md  echo_http_server.py  echo_server.py  mcp_client.py  mcp_http_client.py  test_echo.py  test_echo_http.py
examples/cassettes/: deterministic.mcp.json  echo_and_add.mcp.json  fault.mcp.json  http_echo_and_add.mcp.json  injected.mcp.json  sampling.mcp.json  tools.mcp.json
scripts/: check_version.py
src/mcp_cassette/: __init__.py  __main__.py  _signals.py  _stdio.py  cassette.py  cli.py  matching.py  pytest_plugin.py  report.py  session.py
src/mcp_cassette/record/: __init__.py  checkpoint.py  proxy.py  pump.py  recorder.py
src/mcp_cassette/replay/: __init__.py  faults.py  new_episodes.py  server.py
src/mcp_cassette/transports/http/: proxy.py
tests/: conftest.py  scripted_client.py  test_cassette_schema.py  test_fixture.py  test_record.py
tests/integration/: test_faults.py  test_passthrough.py  test_record.py  test_replay.py
tests/reference_server/: server.py
tests/system/: test_fixture.py
tests/unit/: test_cassette_schema.py  test_checkpoint.py  test_cli_surface.py  test_fault_injector.py  test_matching.py  test_pacing.py  test_proxy_shutdown.py  test_pump.py  test_recorder.py  test_replay_server.py  test_session.py
